app/assets/stylesheets/welcome.scss
// Place all the styles related to the welcome controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/





//以下是首页banner滚动大图的CSS样式包

.box {
  margin-top: -15px;
}

/*  --- 大图高度 和 滚动按钮 ---  */
.fade-carousel {                                      //滚动大图的相框高
    position: relative;
    height: 600px;
}
.fade-carousel .carousel-inner .item {                //图片截取的宽度，这里与相框高度一致
    height: 600px;
}
.fade-carousel .carousel-indicators > li {            //滚动按钮的设置
    width: 5px;
    height: 5px;
    margin: 0 2px;
    background-color: #fff;
    opacity: 0.5;
}
.fade-carousel .carousel-indicators > li.active {     //当前滚动按钮的设置
    width: 40px;
    height: 5px;
    opacity: 0.8;
}

/*  --- 标题文字设置 ---  */
.hero {
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 3;                                       //元素堆叠等级3，将显示在最上层
    color: #fff;
    text-align: center;
    font-family: "Noto Sans SC", sans-serif;
    text-transform: uppercase;                        //英文大写
    text-shadow: 0 0 5px #666;            //文字阴影 和 动态显示时间
      -webkit-transform: translate3d(-50%,-50%,0);
         -moz-transform: translate3d(-50%,-50%,0);
          -ms-transform: translate3d(-50%,-50%,0);
           -o-transform: translate3d(-50%,-50%,0);
              transform: translate3d(-50%,-50%,0);
}
.hero h1 {                                            //h1标题设置
    font-size: 70px;
    font-weight: 600;
    margin: 10px;
    padding: 0;
}

.hero h3 {                                            //h3标题设置
    letter-spacing: 0.1em;
    font-size: 30px;
    font-weight: 500;
}

.fade-carousel .carousel-inner .item .hero {          //动态出现设置
    opacity: 0;
    -webkit-transition: 2s all ease-in-out .1s;
       -moz-transition: 2s all ease-in-out .1s;
        -ms-transition: 2s all ease-in-out .1s;
         -o-transition: 2s all ease-in-out .1s;
            transition: 2s all ease-in-out .1s;
}
.fade-carousel .carousel-inner .item.active .hero {   //动态出现设置
    opacity: 1;
    -webkit-transition: 2s all ease-in-out .1s;
       -moz-transition: 2s all ease-in-out .1s;
        -ms-transition: 2s all ease-in-out .1s;
         -o-transition: 2s all ease-in-out .1s;
            transition: 2s all ease-in-out .1s;
}

/*  --- 遮罩滤镜层 ---  */
.overlay {                                            //遮罩滤镜层，把图片调暗，突出文案内容
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 2;                                       //元素堆叠等级2，将显示在最中层
    background-color: #080d15;
    opacity: 0;
}

/*  --- 按钮 ---  */
.btn.btn-lg {padding: 10px 40px;}
.btn.btn-hero,
.btn.btn-hero:hover,
.btn.btn-hero:focus {
    color: #f5f5f5;
    background-color: #1abc9c;
    border-color: #1abc9c;
    outline: none;
    margin: 20px auto;
}

/*  --- 图片 ---  */
.fade-carousel .slides .slide-1,
.fade-carousel .slides .slide-2,
.fade-carousel .slides .slide-3 {
  height: 600px;
  background-size: cover;                             //确保图片完全撑开
  background-position: center;
  background-repeat: no-repeat;
}
.fade-carousel .slides .slide-1 {
  background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1itg40cj319u0uk0y3.jpg);
}
.fade-carousel .slides .slide-2 {
  background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1jl1b5lj31kw11xjwd.jpg);
}
.fade-carousel .slides .slide-3 {
  background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1kkrhqhj319u0ukwhw.jpg);
}

/*  --- 响应式设置 ---  */
@media screen and (min-width: 980px){
    .hero { width: 980px; }
}
@media screen and (max-width: 640px){
    .hero h1 { font-size: 3em; }
}
@media screen and (max-width: 640px){
    .hero h3 { font-size: 1.5em; }
}


// 主体部分

@media (max-width:768px) {
    .lg-section-2 .content-2 {
        max-width: 100%;
        padding-top: 120px;
    }
}

.lg-section-2 {
    height: 680px;
}
.lg-section-2 .content-2 {
    padding-top: 90px;
    margin: 0 auto;
    width: 690px;
    text-align: center;
}
.lg-section-2 .content-2 h2 {
    padding-bottom: 20px;
    letter-spacing: 3px;
}
.lg-section-2 .content-2 p {
    line-height: 34px;
    font-size: 1.1em;
    color: #666;
    padding: 0 50px;
    text-align: center;
}
.lg-section-2 .content-2 img {
    margin-top: 50px;
    width: 500px;
    height: auto;
}
@media (max-width:960px) {
    .lg-section-3 .content-3 .feature-block {
        width: 250px;
        margin: 0 auto;
        float: none;
    }
}
.lg-section-3 .content-3 .feature-block {
    display: block;
    border-style: none;
    border-radius: 0;
    width: 250px;
    position: relative;
    margin: 15px 30px 0;
    float: left;
}
.lg-section-3 {
    background-color: #f2f2f2;
    height: 640px;
    width: 100%;
}
.lg-section-3 .content-3 {
    display: block;
    width: 960px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    text-align: center;
    padding-top: 70px;
}
.lg-section-3 .feature-title {
    margin-bottom: 50px;
    letter-spacing: 3px;
}
.lg-section-3 .content-3 h4 {
    padding: 20px 0 25px;
    letter-spacing: 3px;
}
.lg-section-3 .content-3 p {
    line-height: 25px;
    font-size: 1.1em;
    color: #666;
    width: 250px;
    margin: 0;
    padding: 0;
}
.lg-section-3 .content-3 img {
    margin-top: 50px;
    width: 250px;
    height: auto;
    border-radius: 3px;
    border: 5px solid #fff;
}
.lg-section-4 {
    display: block;
    width: 100%;
    height: 500px;
    min-width: 960px;
}
.lg-section-4 .content-4 {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 960px;
    height: 450px;
    padding: 50px 0;
    position: relative;
}
.lg-section-4 .content-4 .client-share-left {
    padding-left: 30px;
    float: left;
    width: 580px;
}
.lg-section-4 .content-4 .client-share-right {
    padding-left: 30px;
    float: left;
    width: 380px;
}
.lg-section-4 .content-4 .photo img {
    border: 5px solid #f2f2f2;
    border-radius: 3px;
    width: 80px;
    height: auto;
}
.lg-section-4 .content-4 h2 {
    text-align: center;
    padding-bottom: 60px;
    letter-spacing: 3px;
}
.lg-section-4 .content-4 .client-share-left p {
    padding-top: 20px;
    display: block;
    clear: both;
    width: 350px;
    line-height: 25px;
    color: #666;
    font-size: 1.1em;
}
.lg-section-4 .content-4 .client-share-right p {
    padding-top: 20px;
    display: block;
    clear: both;
    line-height: 25px;
    color: #666;
    font-size: 1.1em;
}
.lg-section-4 .content-4 .name span {
    font-size: 1.1em;
    line-height: 22px;
    font-weight: bold;
    color: #444;
}
.fa {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
}
#fa-quote {
    color: #E61C64;
}
.lg-action {
    display: block;
    background: url("https://ww1.sinaimg.cn/large/006tKfTcly1fd7nyalan1j31kw0w5h5z.jpg");
    background-image: url("https://ws2.sinaimg.cn/large/006tKfTcgy1fgf8kpy5ubj319u0ukmyo.jpg");
    background-position-x: center;
    background-position-y: 80%;
    background-size: cover;
    background-position: center 80%;
    margin: 50px auto 0;
    width: 100%;
    min-width: 960px;
    height: 300px;
    position: relative;
}
.lg-action .action-content {
    display: block;
    min-width: 320px;
    z-index: 91;
    text-align: center;
}
.action-content {
    color: #fff;
    padding: 62px;
}
#action-btn {
    margin-top: 1.3em;
}

